--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -19,7 +19,7 @@ small, strike, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
+table, caption, tbody, tfoot, thead, th,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
@@ -69,7 +69,7 @@ header {
 	transition: border-bottom-color 1s ease;
 }
 header a {
-	color: rgba(0, 0, 0, 0.8);
+	color: white;
 }
 aside {
 	background: #FAFAFA;
