--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,6 +1,7 @@
 body{
     display: flex;
     flex-direction: column;
+    background-color: rgba(7, 204, 161, 0.637);
 }
 main{
     display: flex;
@@ -9,11 +10,31 @@ main{
 }
 main article{
     flex: 2;
-    border:1px solid #ccc;
+    border:3px solid #000000;
     overflow-y: auto;
+    background-color: rgb(182, 248, 248);
 }
 main aside{
     flex: 1;
-    border:1px solid #ccc;
+    border:3px solid #000000;
     overflow-y: auto;
+    background-color: rgb(141, 141, 211);
+}
+header ul{
+    background-color: rgb(184, 74, 74);
+}
+header a{
+    color: white;
+}
+footer{
+    background-color: rgb(95, 218, 211);
+}
+table th ,tr, td{
+    background-color: rgb(255, 255, 255);
+    color: black;
+    border: 2px solid black;
+
+}
+.contactinfo{
+    display: inline;
 }
