--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -20,7 +20,7 @@ img[alt="logo"]{
     height: auto;
 }
 ul{
-    width:20%;
+    width:30%;
     position: absolute;
     left:70%;
     top: -0%;
@@ -77,7 +77,7 @@ button{
     
 }
 button:hover{
-    box-shadow: 0px 4px 2px 4px rgb(0,0,0, 0.5);
+    box-shadow: 0px 4px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .hero-words span{
@@ -91,7 +91,9 @@ button:hover{
     text-align: center;
     font-family: sans-serif;
     color:white;
+    
 }
+
 .lfp h2 span{
     color:#C271FF
 }
@@ -102,7 +104,8 @@ button:hover{
 .pros-container{
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    gap:100px;
 }
 .pros-container div{
     width:20%;
@@ -111,4 +114,49 @@ img[alt="pros"]{
     width:50%;
     translate: 50%;
     border-radius: 50%;
+
 }
+
+
+
+
+
+
+
+.quote-h{
+    border:1px solid white;
+    width:50%;
+    translate: 10%;
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    padding:10px;
+    flex-direction: row;
+    background-color: #C271FF;
+    color: white;
+    position:relative;
+    left: 50%;
+    translate: -50%;
+}
+.quoter{
+    width:30%;
+    margin: 0px 20px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.quoter img{
+    position: relative;
+    border-radius: 50%;
+    width:80%;
+}
+.quote h3,p{
+    text-align:left;
+    font-family: sans-serif;
+}
+blockquote{
+    margin: 20px 0px;
+}
+
+
+
