--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -1,13 +1,14 @@
 
-body{
+.bg{
     background-image:  radial-gradient(circle at center, transparent 5%,#071629 95% ), linear-gradient(to top, #071629 20%, transparent), url(smile.png);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position-x: center;
     background-size: 100% 100%;
-    overflow-y: scroll;
-    background-color: #071629;
     
+}
+body{
+    background-color: #071629;
 }
 header{
     font-size: 10px;
@@ -121,13 +122,12 @@ img[alt="pros"]{
 
 
 
-
-
 .quote-h{
     border:1px solid white;
-    width:50%;
+    width:100%;
     translate: 10%;
     margin-top: 4rem;
+    margin-bottom: 4rem;
     display: flex;
     justify-content: center;
     padding:10px;
@@ -150,13 +150,69 @@ img[alt="pros"]{
     border-radius: 50%;
     width:80%;
 }
-.quote h3,p{
+.quote h3, .quote p{
     text-align:left;
     font-family: sans-serif;
 }
 blockquote{
     margin: 20px 0px;
+    font-size: 3rem;
 }
 
 
 
+
+
+
+
+.videos{
+    margin: 0px 30px;
+}
+.videos h2{
+    text-align: center;
+    color:white;
+    font-family: sans-serif;
+    margin-bottom: 50px;
+    font-size: 2rem;
+}
+.videos span{
+    color:#C271FF
+}
+.vid-container{
+    display: flex;
+}
+.video1,.video2,.video3,.video4{
+    width:20%;
+    margin:0px 30px;
+    display: block;
+    justify-content: center;
+    padding:10px 10px;
+}
+.vid-container h3{
+    text-align: start;
+    font-family: sans-serif;
+}
+.vid-container p{
+    text-align: start;
+    font-family: sans-serif;
+}
+.vid-container video{
+    width: 100%;
+}
+.rater{
+    display:flex;
+    align-items: center;;
+}
+.rater h4{
+    color:white;
+    font-family: sans-serif;
+}
+img[alt="pro1"]{
+    width:10%;
+    border-radius: 50%;
+    margin: 20px 20px;
+}
+.rating{
+    display: flex;
+    justify-content: space-between;
+}
