--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -232,7 +232,8 @@ img[alt="pro1"]{
 .membership h2{
     text-align: center;
     font-family: sans-serif;
-    color: white;;
+    color: white;
+    margin-top: 50px;
 }
 .membership span{
     color:#C271FF
