--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -128,7 +128,6 @@ img[alt="pros"]{
     width:100vw;
     translate: 10%;
     margin-top: 4rem;
-    
     display: flex;
     justify-content: center;
     padding:10px;
@@ -138,6 +137,7 @@ img[alt="pros"]{
     position:relative;
     left: 50%;
     translate: -50%;
+    padding: 100px 60px;
 }
 .quoter{
     width:30%;
@@ -169,6 +169,7 @@ blockquote{
 .videos{
     background-color: white;
     width: 100vw;
+    padding: 100px 30px;
 }
 .videos h2{
     text-align: center;
@@ -228,6 +229,7 @@ img[alt="pro1"]{
 
 .membership{
     width:100vw;
+    padding: 30px 30px;
 }
 .membership h2{
     text-align: center;
@@ -266,3 +268,61 @@ img[alt="logo2"]{
 .button2 button{
     margin: 50px 0px 50px 0px;
 }
+
+
+
+
+.faq{
+    border:1px solid white;
+    width:100vw;
+    background-color: white;
+}
+.faq h2{
+    text-align: center;
+    font-size: 3rem;
+    font-family: sans-serif;
+}
+.q-h{
+    display: grid;
+    grid-template-columns: repeat(2, 40%);
+    width:70%;
+    position: relative;
+    left:60%;
+    translate:-50%;
+}
+.q h3, .q p{
+    text-align: start;
+    font-family: sans-serif;
+    color:black;
+}
+.q p{
+    color:rgb(0, 0, 0, 0.6);
+}
+.q{
+    margin: 20px 40px;
+}
+
+
+
+
+.contact{
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+}
+.contact img{
+    width:15%;
+    margin-top: 10px;
+    margin-left:30px;
+}
+.icon img{
+    margin:0px 10px;
+    width:10%;
+    margin-top: 10px;
+}
+footer p{
+    font-size: 0.5rem;
+    color:rgba(245, 245, 245, 0.5);
+}
+
+
